# dbreaderV2

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.3a21728  createtable.cpp  createtable.hpp  createtable.ui  images.qrc  main.cpp  opendb.cpp  opendb.hpp  opendb.ui  table.cpp  table.hpp  table.ui
